[package]
name = "kujira"
version = "0.5.1"
authors = ["Kujira Labs"]
edition = "2018"
description = "Interfaces and utilities for Kujira cosmwasm contracts"
license = "Apache-2.0"
homepage = "https://kujira.app"
repository = "https://github.com/Team-Kujira/kujira-rs"

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.13.2"
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
