[package]
name = "kujira"
version = "0.7.21"
authors = ["Kujira Labs"]
edition = "2018"
description = "Interfaces and utilities for Kujira cosmwasm contracts"
license = "Apache-2.0"
homepage = "https://kujira.app"
repository = "https://github.com/Team-Kujira/kujira-rs"

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.1.3"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
anyhow = "1"
hex = "0.4"
sha2 = { version = "0.9.9", default-features = false }
thiserror = { version = "1.0.26" }
cw20 = "0.13.2"
