[workspace]
members = [ "packages/*" ]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = "1.2"
cosmwasm-schema = "1.2"
schemars = "0.8"
serde = "1.0"
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
thiserror = "1"
cw20 = "1.0"